All notable changes to this project will be documented in this file.

This project adheres to Semantic Versioning.

- Unreleased
  - Fixed
    - Refresh config gui on cli change
  - Removed
    - Deprecated code utilities

- v1.2.1 - 2021-09-09
  - Fixed
    - An issue where failed quests were not being abandoned automatically when configured
    - An issue where addon messages for abandoned failed quests were triggered multiple times
  - Changed
    - Updated TOC for 2.5.2
  - Removed
    - Unneeded code utilities

- v1.2.0 - 2021-06-19
  - Added
    - New command line for toggling debugging
      - /reckless debug
      - This command is always enabled
    - New command line for abandoning quests that match a qualifier
      - Available qualifiers are dungeon, elite, failed, gray, green, group, heroic, orange, pvp, raid, red, yellow
        - These qualifiers are localized and will match your language
      - /reckless abandon <qualifier>
      - You can enable it in the configuration panel
    - Configuration options for automatically abandoning failed quests
    - Localization for spanish
    - Client version warnings
  - Changed
    - Text formatting for some popups
    - Text for some configuration toggles
    - Addon output no longer prints out what version of classic it is
    - Tooltip styling
  - Removed
    - Unused localization strings

- v1.1.0 - 2021-06-06
  - Added
    - New command line for listing quests in a table
      - /reckless list all
      - This command is enabled by default, and can be used in combination with other commands that require information such as questID
    - Compatibility with the addon Wide Quest List
    - Compatibility with the enhanced quest log from Leatrix Plus

- v1.0.0 - 2021-05-31
  - Added
    - Abandon buttons for individual quests
    - Abandon buttons for zone quests
    - Abandon buttons for campaign quests
    - Abandon buttons for covenant callings