@@ -1,6 +1,6 @@
 ## Interface: 20502
 ## Author: Arrila-Thrall (US)
-## Version: 1.2.1
+## Version: 1.2.2
 ## Title: |cFF80528CReckless Abandon|r |cFF3CE13FBC Classic|r
 ## Notes: A tool for quickly (and recklessly) abandoning quests
 ## SavedVariables: RecklessAbandonClassicDB, RecklessAbandonClassicPrivateDB
